--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,152 @@
-.App {
-  text-align: center;
+.cards {
+  display: grid;
+  margin: 1vmax;
+  grid-gap: 1vmax;
+  gap: 2vmax;
+  align-items: center;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media screen and (max-width: 1000px) {
+  .cards {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+@media screen and (max-width: 650px) {
+  .cards {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.crapper {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: Montserrat;
+  width: 100%;
+  height: 100vh;
+}
+
+.cuter {
+  position: relative;
+  height: 26rem;
+  width: 56rem;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  margin: 2vmax;
+}
+
+.cuter > img {
+  position: absolute;
+  top: 0px;
+  right: -20px;
+  z-index: 0;
+  animation-delay: 0.5s;
+}
+
+.ccontent {
+  animation-delay: 0.3s;
+  position: absolute;
+  left: 20px;
+  z-index: 3;
+}
+
+.ccontent > h1 {
+  color: #111;
+  font-weight: bold;
+  font-family: "Roboto";
+}
+
+.ccontent > p {
+  width: 20rem;
+  font-size: 15px;
+  font-weight: 600;
+  font-family: "Roboto";
+  line-height: 1.4;
+  color: rgba(0, 0, 0, 0.7);
+  margin: 20px 0;
+}
+
+.lmn {
+  border: 4px solid black;
+  border-radius: 10px;
+}
+
+.givereview {
+  border: 2px solid black;
+  padding: 2vmax;
+  width: 75%;
+  margin: auto;
+  border-radius: 10px;
+}
+
+.reviewheader {
+  display: flex;
+  align-items: center;
+}
+
+.reviewheader > img {
+  width: 4vmax;
+}
+
+.reviewcard {
+  padding: 2vmax;
+  border: 1px solid black;
+  border-radius: 7px;
+}
+
+.cardcontainer {
+  width: 76%;
+  margin: auto;
+}
+
+.mainloginContainer {
+  height: 100vh;
+  width: 100vw;
+  max-width: 100%;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.mainloginbox {
+  width: 20vw;
+  height: 50vh;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  box-sizing: border-box;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin: 2vmax;
+  padding: 2vmax;
+}
+
+.goNextButton {
+  border: none;
+  background-color: tomato;
   color: white;
+  width: 100%;
+  padding: 0.8vmax;
+  cursor: pointer;
+  transition: all 0.5s;
+  border-radius: 4px;
+  outline: none;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.219);
 }
 
-.App-link {
-  color: #61dafb;
+.goNextButton:hover {
+  background-color: rgb(179, 66, 46);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.adminLoginHead{
+  text-align: center;
+  padding: 1vmax;
 }
